# ydt

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  debug_analyze.py  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
docs/: publishing.md  usage.md
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_dataset.py  test_e2e.py  test_image.py  test_resize.py  test_visual.py
ydt/: __init__.py
ydt/auto_label/: __init__.py  core.py  model_utils.py  structure.py
ydt/cli/: __main__.py  main.py
ydt/core/: __init__.py  formats.py  logger.py  utils.py
ydt/dataset/: __init__.py  analyze.py  extract.py  split.py  synthesize.py
ydt/image/: __init__.py  augment.py  crop.py  resize.py  slice.py  video.py
ydt/visual/: augment.py  dataset.py
