[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolodt"
version = "0.3.0"
description = "YOLO Dataset Tools - Comprehensive toolkit for YOLO format dataset processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YDT Contributors"},
]
keywords = [
    "yolo",
    "dataset",
    "computer-vision",
    "object-detection",
    "obb",
    "image-processing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
    "sahi>=0.11.0",
    "minio>=7.0.0",
    "imagehash>=4.3.0",
    "scikit-learn>=1.0.0",
    "ultralytics>=8.0.0",
    "albumentations>=1.3.0",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-env>=1.1.0",
    "ruff>=0.14.0",
    "mypy>=1.0.0",
]

[project.scripts]
ydt = "ydt.cli.main:main"

[project.urls]
Homepage = "https://github.com/jaffe-fly/ydt"
Repository = "https://github.com/jaffe-fly/ydt"
Issues = "https://github.com/jaffe-fly/ydt/issues"

[tool.hatch.build.targets.wheel]
packages = ["ydt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except without specifying exception
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B018"]       # Allow useless expressions in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
filterwarnings = ["default"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
# Set environment variables to help with torch DLL loading on Windows
env = [
    "KMP_DUPLICATE_LIB_OK=TRUE",
    "OMP_NUM_THREADS=1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude paths
exclude = [
    "^build/",
    "^dist/",
    "^.venv/",
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "sahi.*",
    "ultralytics.*",
    "albumentations.*",
    "imagehash.*",
    "minio.*",
    "sklearn.*",
]
ignore_missing_imports = true
